ajout modele simplifié png

--- a/jupyter-MEMS.ipynb
+++ b/jupyter-MEMS.ipynb
@@ -72,11 +72,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9f986e54",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b01df9a7",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "def des variables d'espaces etc..."
+    "# import des librairies additionnelles\n",
+    "from newmark import *\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "#%matplotlib notebook\n",
+    "#%matplotlib widget\n",
+    "#%matplotlib ipympl"
    ]
   },
   {
@@ -84,8 +92,12 @@
    "id": "bcf62948",
    "metadata": {},
    "source": [
-    "Equation du mouvement :\n",
-    "$ m \\ddot{x} + c \\dot{x} + k x = F_e(x,t)$\n",
+    "L'équation du mouvement est :\n",
+    "$\\left(1 + \\frac{\\delta m}{m} \\right)\\ddot{y} + \\xi \\dot{y} + \\left(1 - 2T V_{dc}^2 \\right)y - \\left(3T V_{dc}^2 \\right)y^2 - \\left(4T V_{dc}^2 \\right)y^3 = T V_{dc}^2 + 2T V_{dc} V_{ac} \\cos(\\Omega \\tau)$\n",
+    "\n",
+    "\n",
+    "L'équation du mouvement de la poutre peut se mettre sous la forme:\n",
+    "$M \\ddot{y} + C \\dot{y} + K y + f_{nl}(y) = p(\\tau)$\n",
     "\n",
     "Avec la force électrostatique : \n",
     "$ F_e(x,t) = \\frac{\\varepsilon_0 A}{2} \\cdot \\frac{\\left[ V_{dc} + V_{ac} \\cos(\\omega t) \\right]^2}{(d - x)^2}$\n",
@@ -97,7 +109,7 @@
     "- $m = \\rho A h$ : masse de la nano-poutre de masse volumique $\\rho$\n",
     "\n",
     "Equation du mouvement : \n",
-    "$M \\ddot{y} + C \\dot{y} + K y + f_{nl}(y) = p(\\tau)$\n",
+    "\n",
     "\n",
     "Avec : \n",
     "- $M = 1 + \\frac{\\delta m}{m}$\n",
@@ -117,19 +129,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "053ee21a",
+   "cell_type": "markdown",
+   "id": "8813d416",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# import des librairies additionnelles\n",
-    "from newmark import *\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "#%matplotlib notebook\n",
-    "#%matplotlib widget\n",
-    "#%matplotlib ipympl"
+    "Les dimensions variables du capteurs sont :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f30a6e8c",
+   "metadata": {},
+   "source": [
+    "def des variables d'espaces etc..."
    ]
   },
   {
@@ -139,24 +151,16 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "val = [0.995] y= 0.0085415\n",
-      "ome= 0.99486  y= 0.3694891\r"
-     ]
-    },
-    {
      "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m OME, AMPL = compute_response_curve(T, Vdc, Vac, omega0, M, C, K, OMEGA_debut, OMEGA_fin, dOMEGA, nb_pts_per, nb_per)\n\u001b[32m      7\u001b[39m     \u001b[38;5;66;03m# Descente en fréquence\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m OME2, AMPL2 = \u001b[43mcompute_response_curve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mVdc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mVac\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43momega0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mC\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mK\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mOMEGA_fin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mOMEGA_debut\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m-\u001b[49m\u001b[43mdOMEGA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnb_pts_per\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnb_per\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m     \u001b[38;5;66;03m# Chargement des données de la courbe de réponse\u001b[39;00m\n\u001b[32m     11\u001b[39m data = np.loadtxt(\u001b[33m'\u001b[39m\u001b[33mcourbe_reponse_modified.txt\u001b[39m\u001b[33m'\u001b[39m, delimiter=\u001b[33m'\u001b[39m\u001b[33m,\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Utilisateur\\Documents\\INSA FIMI 2\\p2i\\P2i7-MEMS\\newmark.py:114\u001b[39m, in \u001b[36mcompute_response_curve\u001b[39m\u001b[34m(T, Vdc, Vac, omega0, M, C, K, OMEGA_debut, OMEGA_fin, dOMEGAinit, nb_pts_per, nb_per, tolerance)\u001b[39m\n\u001b[32m    112\u001b[39m dt = periode / nb_pts_per\n\u001b[32m    113\u001b[39m NT = nb_per * nb_pts_per\n\u001b[32m--> \u001b[39m\u001b[32m114\u001b[39m tt, Yt, dYt = \u001b[43mNewmark\u001b[49m\u001b[43m(\u001b[49m\u001b[43mY0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdY0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mNT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43momega0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mVdc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mVac\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mOMEGA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mC\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mK\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    115\u001b[39m AMPL[k] = \u001b[38;5;28mmax\u001b[39m(Yt[-\u001b[32m3\u001b[39m * nb_pts_per:])\n\u001b[32m    116\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mome= \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mOME[k,\u001b[38;5;250m \u001b[39m\u001b[32m0\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m0.5f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m  y= \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mAMPL[k,\u001b[38;5;250m \u001b[39m\u001b[32m0\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m0.5g\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m, end=\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\r\u001b[39;00m\u001b[33m\"\u001b[39m, flush=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Utilisateur\\Documents\\INSA FIMI 2\\p2i\\P2i7-MEMS\\newmark.py:47\u001b[39m, in \u001b[36mNewmark\u001b[39m\u001b[34m(Y0, dY0, t_init, dt, NT, omega0, T, Vdc, Vac, OMEGA, M, C, K)\u001b[39m\n\u001b[32m     45\u001b[39m     dY += (\u001b[32m2\u001b[39m / dt) * deltaY\n\u001b[32m     46\u001b[39m     ddY += (\u001b[32m4\u001b[39m / dt**\u001b[32m2\u001b[39m) * deltaY\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m     res = calc_P(T, Vdc, Vac, OMEGA, t) - M * ddY - C * dY - K * Y - \u001b[43mcalc_Fnl\u001b[49m\u001b[43m(\u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mVdc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     48\u001b[39m     normres = \u001b[38;5;28mabs\u001b[39m(deltaY / Y)\n\u001b[32m     50\u001b[39m tt[n], Yt[n], dYt[n] = t, Y, dY\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Utilisateur\\Documents\\INSA FIMI 2\\p2i\\P2i7-MEMS\\newmark.py:11\u001b[39m, in \u001b[36mcalc_Fnl\u001b[39m\u001b[34m(T, Vdc, y)\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcalc_P\u001b[39m(T, Vdc, Vac, OMEGA, t):\n\u001b[32m      9\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m T * Vdc**\u001b[32m2\u001b[39m + \u001b[32m2\u001b[39m * T * Vdc * Vac * np.cos(OMEGA * t)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcalc_Fnl\u001b[39m(T, Vdc, y):\n\u001b[32m     12\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m -(\u001b[32m3\u001b[39m * T * Vdc**\u001b[32m2\u001b[39m) * y**\u001b[32m2\u001b[39m - (\u001b[32m4\u001b[39m * T * Vdc**\u001b[32m2\u001b[39m) * y**\u001b[32m3\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcalc_dFnl\u001b[39m(T, Vdc, y):\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m OMEGA_debut, OMEGA_fin, dOMEGA = \u001b[32m0.9\u001b[39m, \u001b[32m1.10\u001b[39m, \u001b[32m0.005\u001b[39m\n\u001b[32m      3\u001b[39m nb_pts_per, nb_per = \u001b[32m50\u001b[39m, \u001b[32m500\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m OME, AMPL = \u001b[43mcompute_response_curve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mVdc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mVac\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43momega0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mC\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mK\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mOMEGA_debut\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mOMEGA_fin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdOMEGA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnb_pts_per\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnb_per\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m     \u001b[38;5;66;03m# Descente en fréquence\u001b[39;00m\n\u001b[32m      8\u001b[39m OME2, AMPL2 = compute_response_curve(T, Vdc, Vac, omega0, M, C, K, OMEGA_fin, OMEGA_debut, -dOMEGA, nb_pts_per, nb_per)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Utilisateur\\Documents\\INSA FIMI 2\\p2i\\P2i7-MEMS\\newmark.py:83\u001b[39m, in \u001b[36mcompute_response_curve\u001b[39m\u001b[34m(T, Vdc, Vac, omega0, M, C, K, OMEGA_debut, OMEGA_fin, dOMEGAinit, nb_pts_per, nb_per, tolerance)\u001b[39m\n\u001b[32m     81\u001b[39m dt = periode / nb_pts_per\n\u001b[32m     82\u001b[39m NT = nb_per * nb_pts_per\n\u001b[32m---> \u001b[39m\u001b[32m83\u001b[39m tt, Yt, dYt = \u001b[43mNewmark\u001b[49m\u001b[43m(\u001b[49m\u001b[43mY0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdY0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mNT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43momega0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mVdc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mVac\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mOMEGA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mC\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mK\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     84\u001b[39m AMPL[k] = \u001b[38;5;28mmax\u001b[39m(Yt[-\u001b[32m3\u001b[39m * nb_pts_per:])\n\u001b[32m     85\u001b[39m \u001b[38;5;66;03m#print(f'ome= {OME[k, 0]:0.5f}  y= {AMPL[k, 0]:0.5g}', end=\"\\r\", flush=True)\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Utilisateur\\Documents\\INSA FIMI 2\\p2i\\P2i7-MEMS\\newmark.py:36\u001b[39m, in \u001b[36mNewmark\u001b[39m\u001b[34m(Y0, dY0, t_init, dt, NT, omega0, T, Vdc, Vac, OMEGA, M, C, K)\u001b[39m\n\u001b[32m     34\u001b[39m Y += dt * dY + (dt**\u001b[32m2\u001b[39m / \u001b[32m2\u001b[39m) * ddY\n\u001b[32m     35\u001b[39m dY += dt * ddY\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m res = \u001b[43mcalc_P\u001b[49m\u001b[43m(\u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mVdc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mVac\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mOMEGA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m - M * ddY - C * dY - K * Y - calc_Fnl(T, Vdc, Y)\n\u001b[32m     37\u001b[39m normres = \u001b[38;5;28mabs\u001b[39m(res / P)\n\u001b[32m     39\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m normres > precNR:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Utilisateur\\Documents\\INSA FIMI 2\\p2i\\P2i7-MEMS\\newmark.py:9\u001b[39m, in \u001b[36mcalc_P\u001b[39m\u001b[34m(T, Vdc, Vac, OMEGA, t)\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcalc_P\u001b[39m(T, Vdc, Vac, OMEGA, t):\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m T * Vdc**\u001b[32m2\u001b[39m + \u001b[32m2\u001b[39m * T * Vdc * Vac * \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcos\u001b[49m\u001b[43m(\u001b[49m\u001b[43mOMEGA\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
