--- a/jupyter-MEMS.ipynb
+++ b/jupyter-MEMS.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "**Dans ce projet, nous nous interesseront spécifiquement à la mesure de massse d'ultra haute précision.**\n",
     "\n",
-    "Ceux-ci fonctionnent grâce à la resonnance d'une nano-poutre soumise à une force électromagnétique induite par deux sources de courant : une continue et une alternative.\n",
+    "Ceux-ci fonctionnent grâce à la resonnance d'une nano-poutre soumise à une force électromagnétique induite par deux sources de tension : une continue et une alternative.\n",
     "\n",
     "**Nous étudirons l'effet qu'à l'ajout d'une masse sur le comportement du système résonnant et la quantification de celle-ci en mesurant la variation de fréquence propre induite.**\n"
    ]
@@ -54,27 +54,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c4237384",
-   "metadata": {},
-   "source": [
-    "## Modélisation\n",
-    "\n",
-    "Pour simplifier la modélisation et le traitement numérique du problème, on adopte un modèle de type masse-ressort à 1 degré de liberté excité par les efforts électrostatiques générés par l’électrode."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0cf03eb2",
-   "metadata": {},
-   "source": [
-    "PHOTO 1"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "b01df9a7",
+   "execution_count": null,
+   "id": "ed75a3bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,24 +71,74 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c4237384",
+   "metadata": {},
+   "source": [
+    "## Modélisation\n",
+    "\n",
+    "Pour simplifier la modélisation et le traitement numérique du problème, on adopte un modèle de type masse-ressort à 1 degré de liberté excité par les efforts électrostatiques générés par l’électrode."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cf03eb2",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "<img src=\"./modele_simplifié_resonateur.JPG\" alt width=500 heigth=550>\n",
+    "\n",
+    "Figure 2 : Modèle simplifié masse-ressort avec masse ajoutée $\\delta m$\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d9294c5",
+   "metadata": {},
+   "source": [
+    "L'équation du mouvement issue du PFD sur $\\vec{x}$ pour le modele simplifié est : \n",
+    "$$ m \\ddot{x} + c \\dot{x} + k x = F_e(x,t)$$\n",
+    "\n",
+    "$x$ étant le déplacement du bout de la poutre et $\\dot{x}$, $\\ddot{x}$ ses dérivées par rapport au temps t\n",
+    "\n",
+    "Et avec :\n",
+    "- La force électrostatique non-linéaire est : \n",
+    "$ F_e(x,t) = \\frac{\\varepsilon_0 A}{2} \\cdot \\frac{\\left[ V_{dc} + V_{ac} \\cos(\\omega t) \\right]^2}{(d - x)^2}$ <br>\n",
+    "    et : \n",
+    "    - $\\epsilon_0 = 8.5*10^{-12} F.m^{-1} $ : permitivité diélectrique absolue du vide\n",
+    "    - $A=l*h $ : surface de la masse en vis-à-vis de l’électrode\n",
+    "    - $d$ : distance masse-l’électrode\n",
+    "    - $\\omega$ la pulsation liée à l'excitation alternative\n",
+    "    - $V_{dc}$ la tension continue dans l'éléctrode\n",
+    "    - $V_{ac}$ la tension alternative dans l'éléctrode\n",
+    "- $m = \\rho A h$ : masse de la nano-poutre de masse volumique $\\rho$ homogène\n",
+    "- $c$ et $k$ des coefficient d'amortissement et de raideur"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ec03b63",
+   "metadata": {},
+   "source": [
+    "**Cependant** :\n",
+    "Les ordres de grandeurs de $x$ et $\\omega$ sont très différents. Pour que les methodes numériques convergent on procède à un adimensionneemnt des équations.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bcf62948",
    "metadata": {},
    "source": [
-    "L'équation du mouvement est :\n",
-    "$\\left(1 + \\frac{\\delta m}{m} \\right)\\ddot{y} + \\xi \\dot{y} + \\left(1 - 2T V_{dc}^2 \\right)y - \\left(3T V_{dc}^2 \\right)y^2 - \\left(4T V_{dc}^2 \\right)y^3 = T V_{dc}^2 + 2T V_{dc} V_{ac} \\cos(\\Omega \\tau)$\n",
+    "L'équation du mouvement d'un point de la poutre est :\n",
+    "$$\\left(1 + \\frac{\\delta m}{m} \\right)\\ddot{y} + \\xi \\dot{y} + \\left(1 - 2T V_{dc}^2 \\right)y - \\left(3T V_{dc}^2 \\right)y^2 - \\left(4T V_{dc}^2 \\right)y^3 = T V_{dc}^2 + 2T V_{dc} V_{ac} \\cos(\\Omega \\tau)$$\n",
+    "\n",
+    "Elle peut se mettre sous la forme:\n",
+    "$$M \\ddot{y} + C \\dot{y} + K y + f_{nl}(y) = p(\\tau)$$\n",
     "\n",
     "\n",
-    "L'équation du mouvement de la poutre peut se mettre sous la forme:\n",
-    "$M \\ddot{y} + C \\dot{y} + K y + f_{nl}(y) = p(\\tau)$\n",
     "\n",
-    "Avec la force électrostatique : \n",
-    "$ F_e(x,t) = \\frac{\\varepsilon_0 A}{2} \\cdot \\frac{\\left[ V_{dc} + V_{ac} \\cos(\\omega t) \\right]^2}{(d - x)^2}$\n",
     "\n",
-    "Paramètres : \n",
-    "- $\\epsilon_0 = 8.5*10^{-12} F.m^{-1} $ : permitivité diélectrique absolue du vide\n",
-    "- $A=l*h $ : surface de la masse en vis-à-vis de l’électrode\n",
-    "- $d$ : distance masse-l’électrode\n",
-    "- $m = \\rho A h$ : masse de la nano-poutre de masse volumique $\\rho$\n",
     "\n",
     "Equation du mouvement : \n",
     "\n",
