fin partie theorique jupyter

--- a/jupyter-MEMS.ipynb
+++ b/jupyter-MEMS.ipynb
@@ -96,10 +96,10 @@
    "id": "4d9294c5",
    "metadata": {},
    "source": [
-    "L'équation du mouvement issue du PFD sur $\\vec{x}$ pour le modele simplifié est : \n",
+    "L'équation du mouvement issue du Principe Fondamentale de la Dynamique sur $\\vec{x}$ pour le modele simplifié est : \n",
     "$$ m \\ddot{x} + c \\dot{x} + k x = F_e(x,t)$$\n",
     "\n",
-    "$x$ étant le déplacement du bout de la poutre et $\\dot{x}$, $\\ddot{x}$ ses dérivées par rapport au temps t\n",
+    "$x$ étant le déplacement du bout de la poutre et $\\dot{x}$, $\\ddot{x}$ ses dérivées par rapport au temps t.\n",
     "\n",
     "Et avec :\n",
     "- La force électrostatique non-linéaire est : \n",
@@ -121,8 +121,12 @@
    "metadata": {},
    "source": [
     "**Cependant** :\n",
-    "Les ordres de grandeurs de $x$ et $\\omega$ sont très différents. Pour que les methodes numériques convergent on procède à un adimensionneemnt des équations.\n",
-    "\n"
+    "Les ordres de grandeurs de $x$ et $\\omega$ sont très différents. Pour que les methodes numériques convergent on procède à un adimensionnement des équations.\n",
+    "\n",
+    "On pose :\n",
+    "- $\\tau = \\omega_0t$ le temps adimensionné avec $\\omega_0 = \\sqrt{\\frac{k}{m}}$ la pulsation propre du système\n",
+    "- $\\Omega = \\frac{\\omega}{\\omega_0}$ la pulsation adimensionnée\n",
+    "- $y = \\frac{x}{d}$ le déplacement sur $\\vec{x}$ adimensionné"
    ]
   },
   {
@@ -130,20 +134,15 @@
    "id": "bcf62948",
    "metadata": {},
    "source": [
-    "L'équation du mouvement d'un point de la poutre est :\n",
+    "En introduisant un développement limité à la force élétrostatique au coefficient $\\frac{1}{(1-y)²}$, l'équation du mouvement du bout de la poutre devient :\n",
     "$$\\left(1 + \\frac{\\delta m}{m} \\right)\\ddot{y} + \\xi \\dot{y} + \\left(1 - 2T V_{dc}^2 \\right)y - \\left(3T V_{dc}^2 \\right)y^2 - \\left(4T V_{dc}^2 \\right)y^3 = T V_{dc}^2 + 2T V_{dc} V_{ac} \\cos(\\Omega \\tau)$$\n",
+    "\n",
+    "Avec : $T = \\frac{\\varepsilon_0 A}{2m \\omega_0^2 d^3}$\n",
     "\n",
     "Elle peut se mettre sous la forme:\n",
     "$$M \\ddot{y} + C \\dot{y} + K y + f_{nl}(y) = p(\\tau)$$\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "Equation du mouvement : \n",
-    "\n",
-    "\n",
-    "Avec : \n",
+    "Et:\n",
     "- $M = 1 + \\frac{\\delta m}{m}$\n",
     "- $C = \\xi = $\n",
     "- $K = (1 - 2T V_{dc}^2) $\n",
