--- a/jupyter-MEMS.ipynb
+++ b/jupyter-MEMS.ipynb
@@ -61,21 +61,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6960d60d",
+   "id": "c4237384",
    "metadata": {},
    "source": [
-    "PHOTO/schéma "
+    "## Modélisation du problème "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "07b843a9",
+   "id": "f858d3dc",
    "metadata": {},
    "source": [
-    " La nano-poutre est soumise à une tension continue via une électrode 𝑉𝑑𝑐 qui fait fléchir la poutre, alors\n",
-    "qu'une tension alternative harmonique 𝑉𝑎𝑐 la sollicite sur sa fréquence fondamentale de flexion (au maximum\n",
-    "d'amplitude). L’ajout d’une petite masse change la masse totale du résonateur et induit donc un changement de\n",
-    "sa fréquence fondamentale, ce qui permet de déduire la valeur de la masse ajoutée.\n",
+    "### Principe de Fonctionnement\n",
+    "\n",
+    "La nano-poutre est soumise à une tension continue via une électrode 𝑉𝑑𝑐 qui fait fléchir la poutre, alors qu'une tension alternative harmonique 𝑉𝑎𝑐 la sollicite sur sa fréquence fondamentale de flexion (au maximum d'amplitude). L’ajout d’une petite masse change la masse totale du résonateur et induit donc un changement de sa fréquence fondamentale, ce qui permet de déduire la valeur de la masse ajoutée.\n",
+    "\n",
+    "**PHOTO/schéma**\n",
     "\n",
     "À noter que : plus la taille du résonateur est petite, plus la fréquence fondamentale est grande (du MHz\n",
     "au GHz) et plus la sensibilité du dispositif à une perturbation est grande. Une sensibilité élevée entraîne de\n",
@@ -83,49 +84,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "ed75a3bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Amplitude of the periodic solution: 0.1549353256641261\n",
-      "Amplitude of the periodic solution: 0.4891306501527157\n",
-      "Amplitude of the periodic solution: 0.71077291350848\n",
-      "Amplitude of the periodic solution: 0.7107729613098436\n"
-     ]
-    }
-   ],
-   "source": [
-    "# import des librairies additionnelles\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from numpy import zeros\n",
-    "from scipy.integrate import solve_ivp, odeint\n",
-    "import time\n",
-    "\n",
-    "# Importation des fichiers\n",
-    "import newmark as nk\n",
-    "import newmark_masse_ajoutee as nk_ma\n",
-    "import newmark_saut as nk_s\n",
-    "import saut_final as sf\n",
-    "import saut_test as st\n",
-    "import trace_delta_m_f as dmf\n",
-    "\n",
-    "%matplotlib widget\n",
-    "#%matplotlib notebook\n",
-    "#%matplotlib ipympl"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "c4237384",
+   "id": "9671c73a",
    "metadata": {},
    "source": [
-    "## Modélisation du problème \n",
+    "### Modèle simplifié masse-ressort avec masse ajoutée 𝜹𝒎\n",
     "\n",
     "Pour simplifier la modélisation et le traitement numérique du problème, on adopte un modèle de type masse-ressort à un degré de liberté, excité par les efforts électrostatiques générés par l’électrode."
    ]
@@ -163,14 +126,9 @@
     "    - $d$ : distance masse-électrode\n",
     "    - $\\omega$ : pulsation liée à l'excitation alternative\n",
     "    - $V_{dc}$ : tension continue dans l'éléctrode\n",
-    "    - $V_{ac}$ : tension alternative dans l'éléctrode\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2ec03b63",
-   "metadata": {},
-   "source": [
+    "    - $V_{ac}$ : tension alternative dans l'éléctrode\n",
+    "\n",
+    "\n",
     "**Cependant** :\n",
     "Il est nécessaire d’adimensionner les variables $x$ et $\\omega$ car, les ordres de grandeur étant significativement différents entre eux, nous pourrions obtenir des résultats aberrants lors de la mise en place d’un schéma numérique.\n",
     "\n",
@@ -214,11 +172,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "34ba1db6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amplitude of the periodic solution: 0.1549353256641261\n",
+      "Amplitude of the periodic solution: 0.4891306501527157\n",
+      "Amplitude of the periodic solution: 0.71077291350848\n",
+      "Amplitude of the periodic solution: 0.7107729613098436\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import des librairies additionnelles\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from numpy import zeros\n",
+    "from scipy.integrate import solve_ivp, odeint\n",
+    "import time\n",
+    "\n",
+    "# Importation des fichiers\n",
+    "import newmark as nk\n",
+    "import newmark_masse_ajoutee as nk_ma\n",
+    "import newmark_saut as nk_s\n",
+    "import saut_final as sf\n",
+    "import saut_test as st\n",
+    "import trace_delta_m_f as dmf\n",
+    "\n",
+    "%matplotlib widget\n",
+    "#%matplotlib notebook\n",
+    "#%matplotlib ipympl"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cf6b9c96",
    "metadata": {},
    "source": [
-    "## Modélisation du déplacement de la poutre avec l’algorithme de Newmark\n",
+    "## Modélisation du déplacement de la poutre via l’algorithme de Newmark\n",
     "\n",
     "Dans un premier temps, nous travaillons sans masse ajoutée sur la poutre. Nous mettons en place\n",
     "l’algorithme de Newmark afin de tracer une courbe de réponse de la position de l’extrémité de la nano-poutre\n",
@@ -252,7 +248,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9292ef2271a54bd59e1edcd54b63a5d7",
+       "model_id": "72d922c982734005ae64c8b6956b75ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -342,7 +338,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58a8ffdb1e11463bbe7bd42b9e76995d",
+       "model_id": "477ab0a030144a4a85bc6395de2b1826",
        "version_major": 2,
        "version_minor": 0
       },
@@ -396,14 +392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "303cfec4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7b5fa15261f47758905b9d0fba9a224",
+       "model_id": "0a35a028165c4fedaf7c8997d991855d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -472,7 +468,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26e6bc9c05334d819c704dd567b95548",
+       "model_id": "ecc67eb697474e78a2fd9bac4d9b60b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -519,6 +515,8 @@
    "id": "6ed978c0",
    "metadata": {},
    "source": [
+    "Equation : $ \\Delta f = 1.99.10^{18} \\Delta m - 3.80.10^{2}$\n",
+    "\n",
     "À l'aide de la régression linéaire obtenue, nous pouvons en déduire la masse minimale détectable par le capteur de masse. \n",
     "\n",
     "Ainsi, nous pouvons mesurer des masses allant jusqu'à $m_{min} = 1,91.10^{-16} kg$\n",
@@ -535,7 +533,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f33096db2f9842f3a1f05efdcd10b281",
+       "model_id": "d99cf995b2284f9ea5b72ef956eedd86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -591,7 +589,7 @@
    "id": "052be030",
    "metadata": {},
    "source": [
-    "### Bassin d'attraction \n",
+    "### Analyse du bassin d’attraction du système non-linéaire\n",
     "\n",
     "Notre système étant non linéaire, il peut admettre deux solutions différentes pour une même pulsation. C’est pourquoi utilisons le bassin d'attraction afin d'étudier vers laquelle de ces solutions l’équation évolue en fonction des conditions initiales, sans aucune masse ajoutée. "
    ]
@@ -654,6 +652,36 @@
   {
    "cell_type": "markdown",
    "id": "307ca59a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "877c5c58",
+   "metadata": {},
+   "source": [
+    "### Détection non-linéaire par saut d’amplitude"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56cf85d1",
+   "metadata": {},
+   "source": [
+    "expliquer pourquoi on a masse plus petite "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4937035c",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "352939c3",
    "metadata": {},
    "source": []
   }
