--- a/jupyter-MEMS.ipynb
+++ b/jupyter-MEMS.ipynb
@@ -37,7 +37,7 @@
    "id": "adf133ce",
    "metadata": {},
    "source": [
-    "## Contexte \n",
+    "## I - Contexte \n",
     "\n",
     "L'amélioration des techniques industrielles permet aujourd'hui le développement de composants\n",
     "technologiques de plus en plus petits. Ils ouvrent la porte à de nombreux domaines d'application tels que la\n",
@@ -64,7 +64,7 @@
    "id": "c4237384",
    "metadata": {},
    "source": [
-    "## Modélisation du problème "
+    "## II - Modélisation du problème "
    ]
   },
   {
@@ -72,7 +72,7 @@
    "id": "f858d3dc",
    "metadata": {},
    "source": [
-    "### Principe de Fonctionnement\n",
+    "### II.1 - Principe de Fonctionnement\n",
     "\n",
     "La nano-poutre est soumise à une tension continue via une électrode 𝑉𝑑𝑐 qui fait fléchir la poutre, alors qu'une tension alternative harmonique 𝑉𝑎𝑐 la sollicite sur sa fréquence fondamentale de flexion (au maximum d'amplitude). L’ajout d’une petite masse change la masse totale du résonateur et induit donc un changement de sa fréquence fondamentale, ce qui permet de déduire la valeur de la masse ajoutée.\n",
     "\n",
@@ -88,7 +88,7 @@
    "id": "9671c73a",
    "metadata": {},
    "source": [
-    "### Modèle simplifié masse-ressort avec masse ajoutée 𝜹𝒎\n",
+    "### II.2 - Modèle simplifié masse-ressort avec masse ajoutée 𝜹𝒎\n",
     "\n",
     "Pour simplifier la modélisation et le traitement numérique du problème, on adopte un modèle de type masse-ressort à un degré de liberté, excité par les efforts électrostatiques générés par l’électrode."
    ]
@@ -214,7 +214,7 @@
    "id": "cf6b9c96",
    "metadata": {},
    "source": [
-    "## Modélisation du déplacement de la poutre via l’algorithme de Newmark\n",
+    "## III - Modélisation du déplacement de la poutre via l’algorithme de Newmark\n",
     "\n",
     "Dans un premier temps, nous travaillons sans masse ajoutée sur la poutre. Nous mettons en place\n",
     "l’algorithme de Newmark afin de tracer une courbe de réponse de la position de l’extrémité de la nano-poutre\n",
@@ -308,7 +308,7 @@
    "id": "9bb249fc",
    "metadata": {},
    "source": [
-    "## Méthode 1 : Décalage en fréquence"
+    "## IV - Méthode 1 : Décalage en fréquence"
    ]
   },
   {
@@ -316,7 +316,7 @@
    "id": "c0c237e6",
    "metadata": {},
    "source": [
-    "### Tracé d’une courbe de réponse du résonateur sans masse ajoutée\n",
+    "### IV.1 - Tracé d’une courbe de réponse du résonateur sans masse ajoutée\n",
     "\n",
     "Nous pouvons alors, en utilisant les dernières périodes du régime permanent établi, obtenir l’amplitude\n",
     "maximale atteinte.\n",
@@ -380,7 +380,7 @@
    "id": "cf283393",
    "metadata": {},
    "source": [
-    "###  Modification du modèle et ajout d’une masse $\\delta m$\n",
+    "### IV.2 - Modification du modèle et ajout d’une masse $\\delta m$\n",
     "\n",
     "Maintenant que le modèle fonctionne sans masse ajoutée, nous pouvons simuler l’ajout d’une petite masse\n",
     "sur la poutre en modifiant la valeur de la masse adimensionnée 𝑀. En utilisant le même algorithme que celui\n",
@@ -452,7 +452,7 @@
    "id": "c8dbaa23",
    "metadata": {},
    "source": [
-    "### Régression du décalage en fréquence en fonction de la masse ajoutée\n",
+    "### IV.3 - Régression du décalage en fréquence en fonction de la masse ajoutée\n",
     "\n",
     "Nous pouvons alors mesurer le décalage des deux courbes en mesurant la différence de pulsation d’un point\n",
     "particulier. Nous avons choisi le sommet du pic de résonance afin d’avoir un point caractéristique pour chaque\n",
@@ -581,7 +581,7 @@
    "id": "e83cc28a",
    "metadata": {},
    "source": [
-    "## Méthode 2 : Saut en amplitude\n"
+    "## V - Méthode 2 : Saut en amplitude\n"
    ]
   },
   {
@@ -589,7 +589,7 @@
    "id": "052be030",
    "metadata": {},
    "source": [
-    "### Analyse du bassin d’attraction du système non-linéaire\n",
+    "### V.1 - Analyse du bassin d’attraction du système non-linéaire\n",
     "\n",
     "Notre système étant non linéaire, il peut admettre deux solutions différentes pour une même pulsation. C’est pourquoi utilisons le bassin d'attraction afin d'étudier vers laquelle de ces solutions l’équation évolue en fonction des conditions initiales, sans aucune masse ajoutée. "
    ]
@@ -660,7 +660,7 @@
    "id": "877c5c58",
    "metadata": {},
    "source": [
-    "### Détection non-linéaire par saut d’amplitude"
+    "### V.2 - Détection non-linéaire par saut d’amplitude"
    ]
   },
   {
@@ -676,7 +676,7 @@
    "id": "4937035c",
    "metadata": {},
    "source": [
-    "## Conclusion"
+    "## VI - Conclusion"
    ]
   },
   {
